# pygbm

./: LICENSE  README.md  pyproject.toml  q1.py  q2.py
ec2/: pyproject.toml  q1.py
ec2/pygbm/: base_simulator.py  cli.py
pygbm/: __init__.py  cli.py  gbm_simulator.py  version.py
pygbm/gbm/: gbm_simulator.py
